OS X trackpad and magic mouse gestures not working #46341

Closed
opened 2015-10-01 14:18:46 +02:00 by Andre Dupke · 37 comments

System Information
OSX 10.11 (15A284)

Blender Version
Broken: 2.76 RC2 e24ea81
Worked: 2.75 c27589e

Short description of error
Rotation in viewport with magic mouse does not work anymore

Exact steps for others to reproduce the error
Rotation in viewport with magic mouse does not work anymore, even after importing the key configuration from 2.75.
Its zooming instead of rotating, and rotates just after releasing the mouse for a short moment..

**System Information** OSX 10.11 (15A284) **Blender Version** Broken: 2.76 RC2 e24ea81 Worked: 2.75 c27589e **Short description of error** Rotation in viewport with magic mouse does not work anymore **Exact steps for others to reproduce the error** Rotation in viewport with magic mouse does not work anymore, even after importing the key configuration from 2.75. Its zooming instead of rotating, and rotates just after releasing the mouse for a short moment..
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @andredupke

Added subscriber: @andredupke

#46350 was marked as duplicate of this issue

#46350 was marked as duplicate of this issue

#46361 was marked as duplicate of this issue

#46361 was marked as duplicate of this issue

Added subscribers: @MartijnBerger, @Sergey, @mont29

Added subscribers: @MartijnBerger, @Sergey, @mont29

Afaik magic mouse is known more or less broken with Blender since ages, @Sergey, @MartijnBerger?

Afaik magic mouse is known more or less broken with Blender since ages, @Sergey, @MartijnBerger?
Author

No, worked perfect up to 2.76 RC..

No, worked perfect up to 2.76 RC..

Added subscriber: @francis96

Added subscriber: @francis96

Same here. Works still fine in 2.76RC but is broken in 2.76RC2 and 2.76RC3

Same here. Works still fine in 2.76RC but is broken in 2.76RC2 and 2.76RC3

That would be a regression then… We need some OSX dev here - also, iirc OSX made an unwanted update on our builder's machine after RC1, could be the cause of the issue, since I really do not see what commits could have done that between RC1 and RC2 (commits after c586e30053 in https://developer.blender.org/diffusion/B/history/master/;v2.76-rc2), only one that seems to affect OS-related topic is 8db7ca1cca, but really doubt this is the culprit…

That would be a regression then… We need some OSX dev here - also, iirc OSX made an unwanted update on our builder's machine after RC1, could be the cause of the issue, since I really do not see what commits could have done that between RC1 and RC2 (commits after c586e30053 in https://developer.blender.org/diffusion/B/history/master/;v2.76-rc2), only one that seems to affect OS-related topic is 8db7ca1cca, but really doubt this is the culprit…

I then created a fresh user to avoid any influence of plugins or existing preferences. Noticed the same behaviour: Works fine in 2.76RC1 but is broken in 2.76RC2 and 2.76RC3.
System is OS X 10.11 (El Capitan)

Also tried to reproduce this on a second machine wich is still OS X is 10.10 (Yosemite): Works perfect - I was not able to reproduce this error. Tested with 2.76RC[123]

I then created a fresh user to avoid any influence of plugins or existing preferences. Noticed the same behaviour: Works fine in 2.76RC1 but is broken in 2.76RC2 and 2.76RC3. System is OS X 10.11 (El Capitan) Also tried to reproduce this on a second machine wich is still OS X is 10.10 (Yosemite): Works perfect - I was **not** able to reproduce this error. Tested with 2.76RC[123]
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @MilesKramer

Added subscriber: @MilesKramer
Brecht Van Lommel changed title from OSX magic mouse viewport rotation to OS X trackpad and magic mouse gestures not working 2015-10-03 02:19:10 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

I can't reproduce this issue on OS X 10.11 (15A284), with a mid 2012 MacBook Pro Retina. Blender 2.76 RC3 seems to be working fine.

Do zoom and rotate gestures work on images in Preview? Could there be any system preferences influencing this? Do you have an extension like MagicPrefs installed?

I can't reproduce this issue on OS X 10.11 (15A284), with a mid 2012 MacBook Pro Retina. Blender 2.76 RC3 seems to be working fine. Do zoom and rotate gestures work on images in Preview? Could there be any system preferences influencing this? Do you have an extension like MagicPrefs installed?

Everything else seems to be working normally. I don't have any settings related to that changed, at least nothing I can imagine would cause that. I don't even have my graphics tablet driver installed any more. It's not plugged in either, so that can't be causing trouble.

Everything else seems to be working normally. I don't have any settings related to that changed, at least nothing I can imagine would cause that. I don't even have my graphics tablet driver installed any more. It's not plugged in either, so that can't be causing trouble.

Added subscriber: @Dimitar

Added subscriber: @Dimitar

I am experiencing the same issue on 2014 macbook pro. Trackpad gestures work fine in 2.75a but not in 2.76 RC3

I am experiencing the same issue on 2014 macbook pro. Trackpad gestures work fine in 2.75a but not in 2.76 RC3

Trying with a magic mouse, I can see the issue, it works fine in 2.76RC1 but in 2.76RC2 it's zooming when trying to rotate. In my own build of the latest master and the latest build from builder.blender.org it works fine though, so it definitely seems like it's something in the build environment.

Maybe the Xcode version, OS X deployment target, or SDK version was changed?

Trying with a magic mouse, I can see the issue, it works fine in 2.76RC1 but in 2.76RC2 it's zooming when trying to rotate. In my own build of the latest master and the latest build from builder.blender.org it works fine though, so it definitely seems like it's something in the build environment. Maybe the Xcode version, OS X deployment target, or SDK version was changed?

I'm not building it myself (and won't likely have time to set that up today, but I can test tomorrow), but my xcode version is 7.0.1, if that makes any difference.

I'm not building it myself (and won't likely have time to set that up today, but I can test tomorrow), but my xcode version is 7.0.1, if that makes any difference.

No need to make your own build to test this.

I think we mainly need more information from the person that made the builds (@MartijnBerger?) about any changes made on that system between RC1 and RC2.

No need to make your own build to test this. I think we mainly need more information from the person that made the builds (@MartijnBerger?) about any changes made on that system between RC1 and RC2.
Member

There was one change and that on investigating a report on XCode 7 that was upgraded.

Unlike for windows I do not have a dedicated machine for building OS X builds. Which judging by this report is something I should get.

Is RC3 also broken ? If so ill revert to 6.4

There was one change and that on investigating a report on XCode 7 that was upgraded. Unlike for windows I do not have a dedicated machine for building OS X builds. Which judging by this report is something I should get. Is RC3 also broken ? If so ill revert to 6.4
Member

ill rebuild RC3 with 6.4 and upload somewhere to test this today or early tomorrow

ill rebuild RC3 with 6.4 and upload somewhere to test this today or early tomorrow

I upgraded to Xcode 7 and can now also see the issue in my own builds when using the 10.11 SDK. It seems beginGestureWithEvent and endGestureWithEvent are no longer called. Other seems to have encountered the same issue:
https://forums.developer.apple.com/thread/19536

I upgraded to Xcode 7 and can now also see the issue in my own builds when using the 10.11 SDK. It seems `beginGestureWithEvent` and `endGestureWithEvent` are no longer called. Other seems to have encountered the same issue: https://forums.developer.apple.com/thread/19536

I have a fix for this but would prefer to commit it after the release so that there is time to test it properly, since this is quite fragile code with many tweaks over the years.

For 2.76 I think it would be best to use Xcode 6.4 with the 10.10 SDK.

I have a fix for this but would prefer to commit it after the release so that there is time to test it properly, since this is quite fragile code with many tweaks over the years. For 2.76 I think it would be best to use Xcode 6.4 with the 10.10 SDK.

This comment was removed by @brecht

*This comment was removed by @brecht*
Member

In #46341#339375, @brecht wrote:
I have a fix for this but would prefer to commit it after the release so that there is time to test it properly, since this is quite fragile code with many tweaks over the years.

For 2.76 I think it would be best to use Xcode 6.4 with the 10.10 SDK.

I agree. Ill downgrade and rebuild RC3 so we can confirm

> In #46341#339375, @brecht wrote: > I have a fix for this but would prefer to commit it after the release so that there is time to test it properly, since this is quite fragile code with many tweaks over the years. > > For 2.76 I think it would be best to use Xcode 6.4 with the 10.10 SDK. I agree. Ill downgrade and rebuild RC3 so we can confirm
Member
https://transfer.sh/15CsJ0/blender-2.76-rc3-xcode-6.4-x86-64.zip ( same as RC3 except xcode 6.4 build )
Author

2.76 RC3 built with xcode 6.4 works fine here!

2.76 RC3 built with xcode 6.4 works fine here!

Sorry for the delay, the posted build works as normal for me as well.

Sorry for the delay, the posted build works as normal for me as well.

This issue was referenced by a8dd0af8cf

This issue was referenced by a8dd0af8cf793f991bcaa0c219c1a3b2dc10a910

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @BillisSaved

Added subscriber: @BillisSaved

Good evening everyone,

I hope you had a wonderful weekend. I apologize if this question has an obvious answer based on the comments above, but I'm fairly new to Blender - which is a fantastic app - and, although I see the post that indicates this task is resolved, I'm not sure what I need to do to implement the fix on my MacBook Pro with Retina Display running OS X 10.11 El Capitan. Would one of you more knowledgable folks be able to point me in the right direction, please. Thanks and have a great evening.

God bless,
Bill

Good evening everyone, I hope you had a wonderful weekend. I apologize if this question has an obvious answer based on the comments above, but I'm fairly new to Blender - which is a fantastic app - and, although I see the post that indicates this task is resolved, I'm not sure what I need to do to implement the fix on my MacBook Pro with Retina Display running OS X 10.11 El Capitan. Would one of you more knowledgable folks be able to point me in the right direction, please. Thanks and have a great evening. God bless, Bill

If you're using the final 2.76 release, you shouldn't have to do anything, it should just work.

In general fixes are included in automated builds within 24 hours as well:
https://builder.blender.org/download/

If you're using the final 2.76 release, you shouldn't have to do anything, it should just work. In general fixes are included in automated builds within 24 hours as well: https://builder.blender.org/download/
Member

@BillisSaved please download Blender 2.76 from blender.org which has the included fix.

@BillisSaved please download Blender 2.76 from blender.org which has the included fix.

Good morning everyone,

Thanks so much for your assistance. Actually, I had already downloaded and installed the latest version of Blender 2.76, but I was still encountering the problem with the trackpad functionality. I had to completely uninstall Blender from my MacBook - including preference files. I then re-installed Blender 2.76, and the trackpad is functioning as I expected. Thanks again for your help. Have a great day!

God bless,
Bill

Good morning everyone, Thanks so much for your assistance. Actually, I had already downloaded and installed the latest version of Blender 2.76, but I was still encountering the problem with the trackpad functionality. I had to completely uninstall Blender from my MacBook - including preference files. I then re-installed Blender 2.76, and the trackpad is functioning as I expected. Thanks again for your help. Have a great day! God bless, Bill
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46341
No description provided.