Fix T46341: OS X trackpad and magic mouse gestures not working with 10.11 SDK.

Differential Revision: https://developer.blender.org/D1539